# IMU_test

./: .gitignore  .gitmodules  .imu_table.py.swp
IMU_live/: README.txt
IMU_live/pico-bno-demo/: CMakeLists.txt
IMU_log/: README.txt  imu_log.csv  imu_log_table.txt  log_imu.py
IMU_log/pico-bno-demo/src/: main.cpp
IMU_test/: .README.txt.swp  .gitignore  README.txt
imu_test/: imu_read.py  imu_test.py  live_plot.py  main.py
imu_test/imuV1/: imu_read.py  imu_test.py  live_plot.py  main.py  plotter.py
imu_test/imuV2/: imu_collect.py  imu_collect_accel.py  plot.py  plotter.py  plotter_accel.py
imu_test/logs/: imu_data000.csv  imu_data001.csv  imu_data002.csv
old/IMU_live/pico-bno-demo/src/: main.cpp
old/IMU_log/: imu_log_table.txt  imu_table.py
old/IMU_log/pico-bno-demo/: CMakeLists.txt
old/IMU_log/pico-bno-demo/src/: main.cpp
